infra/frontro/sparks-edge/service-sparks-auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: sparks-auth
  namespace: sparks-edge
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sparks-auth
  sessionAffinity: None
  type: ClusterIP
