infra/frontro/sparks-edge/networkpolicy-sparks-auth.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sparks-auth
  namespace: sparks-edge
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: moments-direct
      podSelector:
        matchLabels:
          app: moments-direct-gateway
    ports:
    - port: 8080
      protocol: TCP
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
